--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,33 @@
+1.1rc1
+ - require capng
+ - allow ICECC_VERSION file to start with a .
+ - work with different executable names for docbook-to-man on different distributions
+ - support color diagnostics if possible
+ - fix several crashes
+ - clean up and improve documentation
+ - move icecc-create-env to bindir. 
+ - Try to use only the best available scheduler
+ - make daemon port configurable
+ - USE_SCHEDULER now accepts host:port to change ports
+ - use system lzo, drop bundled minilzo
+ - force local compilation when required in more cases
+ - detect some clang out of memory errors.
+ - better support for FreeBSD
+ - bump protocol version to 34
+ - daemon requires chroot
+ - some code refactoring for better maintainability
+ - find if feature is supported by checking protocol version
+ - better logging on error conditions
+ - Create many tests cases
+ - use path name instead of localhost for unix socket
+ - clean up build system
+ - use getnameinfo() instead of inet_ntoa()
+ - fix some valgrind found issues
+ - drop supplementary groups before setgid()
+ - make signal handlers more robust
+ - work better if user "icecc" does not exist
+ - find compilers outside of PATH when building locally
+ 
 1.0.1
 - use su option for logrotate
 - require logrotate for suse package
