--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Current
+1.1rc3
  - Fix broken pipe race condition
  - Better error handling
  - Crash fixes
@@ -9,7 +9,10 @@ Current
  - Extract enviornments with compile priority, not daemon priority
  - Handle spaces in the parameters following -MT
  - Handle -target -arch -c-isystem and -cxx-isystem (clang)
- - Add --extra-name flag for use in some NAT situations
+ - Handle NAT situations better
+ - Add load control for preprocessing
+ - Handle scheduler unable to reach remote machine
+ - Make scheduler election algorithm handle multiple netnames
 
 1.1rc2
  - -gsplit-dwarf support for debug fission (https://gcc.gnu.org/wiki/DebugFission)
