Removed dependency on native tar command and used libarchive library (#447)
* Removed dependency on native tar command and used libarchive library instead
* Updated NEWS and README.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.2.1
+- require libarchive
+
 1.2
  - Add more compiler flags to the list that mean build locally
    * -pedantic (preprocessing only)
