move unittests from tests/ to their own directory
They were kind of lost among all the files used for tests.
Unit tests are faster than "real" tests done by launching the binaries,
so this could help reduce the time of running the tests.

--- a/README
+++ b/README
@@ -31,7 +31,8 @@ How to contribute
 Fork on github.com and send a pull request:
 https://github.com/icecc/icecream
 
-There is a testsuite in the tests/ directory, see the README file there.
+There is a testsuite in the tests/ directory and unit tests in unittests/,
+see the README files there.
 
 Mailing list:
 icecream-users@googlegroups.com  (icecream-users+subscribe@googlegroups.com)
