--- a/README
+++ b/README
@@ -12,7 +12,8 @@ Note: The package name may vary by distro
 * libzstd-devel
 
 e.g. on Ubuntu you might need:
-sudo apt-get install libtool automake autotools-dev libcap-ng-dev libarchive-dev libzstd-dev docbook2x
+sudo apt-get install libtool automake autotools-dev libcap-ng-dev libarchive-dev libzstd-dev docbook2x liblzo2-dev
+
 
 How to install icecream
 =======================
